--- a/Markova_MA/1.1/Makefile (1)
+++ b/Markova_MA/1.1/Makefile (1)
@@ -4,10 +4,10 @@ CFLAGS=-g
 all: do-test clean
 
 sum.o: sum.c sum.h
-#	gcc -c sum.c -o sum.o
+	gcc -c sum.c -o sum.o
 
 test_sum.o: test_sum.c sum.h
-#	gcc -c test_sum.c
+	gcc -c test_sum.c
 
 a.out: test_sum.o sum.o
 	gcc test_sum.o sum.o
