--- a/Gorev_VA/1.2/Makefile
+++ b/Gorev_VA/1.2/Makefile
@@ -1,6 +1,12 @@
-JnA2vqJ8gMs.jpg: file.c root.c root.h
+all: do-test clear
+
+do-test: a.out
+	./a.out
+
+a.out: 
 	gcc -c file.c
 	gcc -c root.c
 	gcc root.o file.o
-	./a.out
-	rm root.o file.o
+
+clear:
+	rm root.o file.o a.out
