--- a/Markova_MA/1.1/Makefile
+++ b/Markova_MA/1.1/Makefile
@@ -1,5 +1,9 @@
-typedef double(*RRFUN)(double x);
-
-double root(RRFUN f, double a, double b, double eps);
-double abcf(RRFUN f, double x);
-double f1 (double x);
+all: run
+test_sum.o: test_sum.c
+	gcc -std=c99 -c test_sum.c -o test_sum.o -lm
+sum.o: sum.c
+	gcc -std=c99 -c sum.c -o sum.o -lm
+run: test_sum.o sum.o
+	gcc -o run test_sum.o sum.o -lm
+clean:
+	rm -rf *.o
