--- a/Markova_MA/1.1/Makefile
+++ b/Markova_MA/1.1/Makefile
@@ -1,9 +1,9 @@
 all: run
-test_sum.o: test_sum.c
-	gcc -std=c99 -c test_sum.c -o test_sum.o -lm
-sum.o: sum.c
-	gcc -std=c99 -c sum.c -o sum.o -lm
-run: test_sum.o sum.o
-	gcc -o run test_sum.o sum.o -lm
-clean:
+test.o: test.c
+	gcc -std=c99 -c test.c -o test.o -lm
+f.o: f.c
+	gcc -std=c99 -c f.c -o f.o -lm
+run: test.o f.o
+	gcc -o run test.o f.o -lm
+clean: 
 	rm -rf *.o
