--- a/Gorev_VA/1.2/Makefile
+++ b/Gorev_VA/1.2/Makefile
@@ -4,8 +4,8 @@ do-test: a.out
 	./a.out
 
 a.out: file.o root.o
-	gcc -c file.cpp
-	gcc -c root.cpp
+	gcc -c file.c
+	gcc -c root.c
 	gcc root.o file.o
 
 clear:
