--- a/Gorev_VA/1.2/Makefile
+++ b/Gorev_VA/1.2/Makefile
@@ -6,7 +6,7 @@ do-test: a.out
 a.out: file.o root.o
 	gcc -c file.c
 	gcc -c root.c
-	gcc root.o file.o
+	gcc root.o file.o -lm
 
 clear:
 	rm root.o file.o a.out
