--- a/Markova_MA/1.1/Makefile
+++ b/Markova_MA/1.1/Makefile
@@ -5,8 +5,8 @@ do-test: a.out
 	./a.out
 
 a.out: file.o root.o
-	gcc -c file.c -lm
-	gcc -c root.c -lm
+	gcc -c file.c 
+	gcc -c root.c 
 	gcc root.o file.o -lm
 
 clear:
