--- a/Markova_MA/1.1/Makefile
+++ b/Markova_MA/1.1/Makefile
@@ -1,13 +1,13 @@
-  
-all: do-test clear
+all: do-test
+
+f.o: f.c f.h
+	gcc -c f.c
+
+test.o: test.c f.h
+	gcc -c test.c
+
+a.out: test.o f.o
+	gcc test.o f.o -lm
 
 do-test: a.out
 	./a.out
-
-a.out: file.o root.o
-	gcc -c file.c 
-	gcc -c root.c 
-	gcc root.o file.o -lm
-
-clear:
-	rm root.o file.o a.out
