Изменены ссылки на umath.h

--- a/Chizhik_MA/5.1/Makefile
+++ b/Chizhik_MA/5.1/Makefile
@@ -1,10 +1,10 @@
 all: do-test clean
 
-umath.o: umath.h umath.cpp
+umath.o: ../lib/umath.h umath.cpp
 	g++ -c umath.cpp
-interpolation.o: interpolation.h umath.h interpolation.cpp
+interpolation.o: interpolation.h ../lib/umath.h interpolation.cpp
 	g++ -c interpolation.cpp
-test.o: interpolation.h umath.h test.cpp
+test.o: interpolation.h ../lib/umath.h test.cpp
 	g++ -c test.cpp
 a.out: interpolation.o umath.o test.o
 	g++ -o a.out interpolation.o umath.o test.o -lm
