--- a/Gorev_VA/3.2/Makefile
+++ b/Gorev_VA/3.2/Makefile
@@ -1,4 +1,12 @@
-all:
-	gcc file.c -lm
+all: do-test clear
+
+do-test: a.out
 	./a.out
-	rm a.out
+
+a.out: file.o min_value.o
+	gcc -c min_value.c
+	gcc -c min_value.c
+	gcc min_value.o file.o
+
+clear:
+	rm min_value.o file.o a.out
