--- a/Gorev_VA/3.2/Makefile
+++ b/Gorev_VA/3.2/Makefile
@@ -6,7 +6,7 @@ do-test: a.out
 a.out: file.o min_value.o
 	gcc -c min_value.c
 	gcc -c min_value.c
-	gcc min_value.o file.o
+	gcc min_value.o file.o -lm
 
 clear:
 	rm min_value.o file.o a.out
