--- a/Markova_MA/2.2/Makefile
+++ b/Markova_MA/2.2/Makefile
@@ -1,10 +1,10 @@
 all: do-test
 
 f.o: f.c f.h
-	gcc -c f.c -lm
+#	gcc -c f.c -lm
 
-test.o: test.c f.h
-	gcc -c test.c
+test.o: test.o f.h
+#	gcc -c test.c
 
 a.out: test.o f.o
 	gcc test.o f.o -lm
