--- a/Krasilnikov_NA/Makefile
+++ b/Krasilnikov_NA/Makefile
@@ -3,18 +3,17 @@ CFLAGS=-g
 
 all: do-test clean
 
-svertka.o: svertka.c svertka.h
-#	gcc -c svertka.c
+simpson.o: simpson.c simpson.h
+	gcc -c simpson.c
 
-test_svertka.o: test_svertka.c svertka.h
-#	gcc -c test_svertka.c
+test_simpson.o: test_simpson.c simpson.h
+	gcc -c test_simpson.c
 
-a.out: test_svertka.o svertka.o
-	gcc test_svertka.o svertka.o
+a.out: test_simpson.o simpson.o
+	gcc test_simpson.o simpson.o
 
 do-test: a.out
 	./a.out
 
-clean: test_svertka.o svertka.o
-	rm test_svertka.o svertka.o a.out leak.out
-	
+clean: test_simpson.o simpson.o
+	rm test_simpson.o simpson.o a.out leak.out
