--- a/Krasilnikov_NA/2.3/Makefile
+++ b/Krasilnikov_NA/2.3/Makefile
@@ -4,10 +4,10 @@ CFLAGS=-g
 all: do-test clean
 
 simpson.o: simpson.c simpson.h
-	gcc -c simpson.c
+#	gcc -c simpson.c
 
 test_simpson.o: test_simpson.c simpson.h
-	gcc -c test_simpson.c
+#	gcc -c test_simpson.c
 
 a.out: test_simpson.o simpson.o
 	gcc test_simpson.o simpson.o
