--- a/Byzova_AD/5/makefile
+++ b/Byzova_AD/5/makefile
@@ -1,10 +1,9 @@
-CFLAGS = -c -Wall -O3
-prog.out: 5_.o 
-	gcc 5_.o tests5_.o -lm -o prog.out
-5_.o: 5.h tests5_.o 
-	gcc $(CFLAGS) 5.c -o 5_.o 
-tests5_.o: 5.h
-	gcc $(CFLAGS) tests5.c -o tests5_.o
+CC=gcc
+CFLAGS = -Wall -O3
+prog.out: 5.o tests5.o
+	gcc 5.o tests5.o -lm -o prog.out
+5.o: 5.h 5.c  
+tests5.o: 5.h tests5.c
 clean:
-	rm -f prog.out 5_.o tests5_.o  
+	rm -f prog.out tests5.o 5.o
 
