--- a/Byzova_AD/2.2/makefile
+++ b/Byzova_AD/2.2/makefile
@@ -1,10 +1,8 @@
-CFLAGS = -c -Wall -O3
-prog.out: 2_.o 
-	gcc 2_.o tests2_.o -lm -o prog.out
-2_.o: 2.h tests2_.o 
-	gcc $(CFLAGS) 2.c -o 2_.o 
-tests2_.o: 2.h
-	gcc $(CFLAGS) tests2.c -o tests2_.o
+CC=gcc
+CFLAGS = -Wall -O3
+prog.out: 2.o tests2.o
+	gcc 2.o tests2.o -lm -o prog.out
+2.o: 2.h 2.c  
+tests2.o: 2.h tests2.c
 clean:
-	rm -f prog.out 2_.o tests2_.o  
-
+	rm -f prog.out tests2.o 2.o
