--- a/Byzova_AD/1.1/makefile
+++ b/Byzova_AD/1.1/makefile
@@ -1,9 +1,8 @@
-CFLAGS = -c -Wall -O3
-prog.out: 1_.o 
-	gcc 1_.o func_.o -lm -o prog.out 
-1_.o: func.h func_.o 
-	gcc $(CFLAGS) 1.c -o 1_.o 
-func_.o: func.h
-	gcc $(CFLAGS) func.c -o func_.o
+CC=gcc
+CFLAGS = -Wall -O3
+prog.out: 1.o tests1.o
+	gcc 1.o tests1.o -lm -o prog.out
+1.o: 1.h 1.c  
+tests1.o: 1.h tests1.c
 clean:
-	rm -f prog.out 1_.o func_.o 
+	rm -f prog.out tests1.o 1.o
