--- a/Gorev_VA/5.5/Makefile
+++ b/Gorev_VA/5.5/Makefile
@@ -4,9 +4,9 @@ do-test: a.out
 	./a.out
 
 a.out: file.o appr.o
-	gcc -c appr.c
-	gcc -c appr.c
-	gcc appr.o file.o -lm
+	g++ -c appr.c
+	g++ -c appr.c
+	g++ appr.o file.o -lm
 
 clear:
 	rm appr.o file.o a.out
