--- a/Glugovskaya_YA/2.3/makefile
+++ b/Glugovskaya_YA/2.3/makefile
@@ -1,5 +1,5 @@
 prog.out: main.o test.o solve.o
-	gcc main.o test.o solve.o -o prog.out
+	gcc main.o test.o solve.o -o prog.out -lm
 main.o: main.c test.h solve.h
 	gcc -c main.c
 solve.o: solve.c solve.h test.h
