--- a/Krasilnikov_NA/5.2/Makefile
+++ b/Krasilnikov_NA/5.2/Makefile
@@ -1,11 +1,13 @@
 all: do-test clean
 
+test_int.o: test.o interpolation.h
+
+a.out: test.o
+	g++ test.o
+
 do-test: a.out
 	./a.out
 
-a.out: test.o
-	g++ -c test.cpp
-	g++ test.o -lm
-
 clean:
-	rm test.o a.out
+	rm test.o
+	
