--- a/Korban_KD/2.3/makefile
+++ b/Korban_KD/2.3/makefile
@@ -3,11 +3,11 @@ FLAGS = -W -Wall -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -fstac
 prog: ../lib/exmath.o test.o integration.o 
 	gcc -lm $(FLAGS) test.o ../lib/exmath.o integration.o -o prog
 ../lib/exmath.o: ../lib/exmath.c ../lib/exmath.h
-	gcc $(FLAGS) -c ../lib/exmath.c -o ../lib/exmath.o
+	gcc -lm $(FLAGS) -c ../lib/exmath.c -o ../lib/exmath.o
 test.o: test.c
-	gcc $(FLAGS) -c test.c
+	gcc -lm $(FLAGS) -c test.c
 integration.o: integration.c integration.h
-	gcc $(FLAGS) -c integration.c 	
+	gcc -lm $(FLAGS) -c integration.c 	
 
 	
 	
