--- a/Korban_KD/3.1/makefile
+++ b/Korban_KD/3.1/makefile
@@ -3,11 +3,11 @@ FLAGS = -W -Wall -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -fstac
 prog: ../lib/exmath.o test.o find_min.o 
 	gcc -lm $(FLAGS) test.o ../lib/exmath.o find_min.o -o prog
 ../lib/exmath.o: ../lib/exmath.c ../lib/exmath.h
-	gcc $(FLAGS) -c ../lib/exmath.c -o ../lib/exmath.o
+	gcc -lm $(FLAGS) -c ../lib/exmath.c -o ../lib/exmath.o
 test.o: test.c
-	gcc $(FLAGS) -c test.c
+	gcc -lm $(FLAGS) -c test.c
 find_min.o: find_min.c find_min.h
-	gcc $(FLAGS) -c find_min.c 	
+	gcc -lm $(FLAGS) -c find_min.c 	
 
 	
 	
