once again fixed  makefile

--- a/Korban_KD/2.3/makefile
+++ b/Korban_KD/2.3/makefile
@@ -1,13 +1,13 @@
 FLAGS = -W -Wall -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -fstack-protector-all -Wfloat-equal -Wpointer-arith -Wwrite-strings -Wcast-align -Wno-long-long -Wmissing-declarations
 
 prog: ../lib/exmath.o test.o integration.o 
-	gcc -lm $(FLAGS) test.o ../lib/exmath.o integration.o -o prog
+	gcc  $(FLAGS) test.o ../lib/exmath.o integration.o -o prog -lm 
 ../lib/exmath.o: ../lib/exmath.c ../lib/exmath.h
-	gcc -lm $(FLAGS) -c ../lib/exmath.c -o ../lib/exmath.o
+	gcc  $(FLAGS) -c ../lib/exmath.c -o ../lib/exmath.o -lm 
 test.o: test.c
-	gcc -lm $(FLAGS) -c test.c
+	gcc  $(FLAGS) -c test.c -lm 
 integration.o: integration.c integration.h
-	gcc -lm $(FLAGS) -c integration.c 	
+	gcc  $(FLAGS) -c integration.c  -lm 
 
 	
 	
