--- a/Kandaurova_VB/m1.2/makefile
+++ b/Kandaurova_VB/m1.2/makefile
@@ -4,10 +4,10 @@ CFLAGS=-g
 all: do-test clean
 
 det.o: det.c det.h
-#	gcc -c obr.c 
+#	gcc -c det.c 
 
 test.o: test.c det.h
-#	gcc -c testm.c 
+#	gcc -c test.c 
 
 a.out: test.o det.o
 	gcc test.o det.o -lm
