--- a/Krasilnikov_NA/M1.4/Makefile
+++ b/Krasilnikov_NA/M1.4/Makefile
@@ -10,10 +10,10 @@ test_Sole.o: test_Sole.c Sole.h
 #	gcc -c test_Sole.c
 
 a.out: test_Sole.o Sole.o
-	gcc test_Sole.o Sole.o -lm
+	gcc test_Sole.o Sole.o -lm -g
 
 do-test: a.out
-	./a.out
+	valgrind ./a.out
 
 clean: test_Sole.o Sole.o
 	rm test_Sole.o Sole.o a.out
