--- a/Gorev_VA/1D_3/Makefile
+++ b/Gorev_VA/1D_3/Makefile
@@ -3,7 +3,7 @@ all: do-test clear
 do-test: a.out
 	./a.out
 
-a.out: file.o inverse.o
+a.out: inverse.o file.o
 	gcc -c inverse.c
 	gcc -c file.c
 	gcc inverse.o file.o -lm
