--- a/Gorev_VA/2D_2/Makefile
+++ b/Gorev_VA/2D_2/Makefile
@@ -1,8 +1,12 @@
-all: f clear
+all: do-test clear
 
-f: file.c
-	gcc file.c
+do-test: a.out
 	./a.out
 
-clear: a.out
-	rm a.out
+a.out: det.o file.o
+	gcc -c det.c
+	gcc -c file.c
+	gcc det.o file.o -lm
+
+clear:
+	rm det.o file.o a.out
