Исправил обмен 2 строк и добавил valgrind в Makefile

--- a/Krasilnikov_NA/M2.2/Makefile
+++ b/Krasilnikov_NA/M2.2/Makefile
@@ -11,7 +11,7 @@ a.out: test_Det.o Det.o
 	gcc test_Det.o Det.o -lm
 
 do-test: a.out
-	./a.out
+	valgrind ./a.out
 
 clean: test_Det.o Det.o
 	rm test_Det.o Det.o a.out
