Работает, но не правильно

--- a/Krasilnikov_NA/S5/Makefile
+++ b/Krasilnikov_NA/S5/Makefile
@@ -1,19 +1,19 @@
 all: do-test clean
 
-mystring.o: ../lib/mystring.h ../lib/mystring.c
-	gcc -c ../lib/mystring.c
+mystring.o: ../libs/mystring.h ../libs/mystring.c
+	gcc -c ../libs/mystring.c
 
-fromat.o: ../lib/mystring.h fromat.h fromat.c
-	gcc -c fromat.c
+format.o: ../libs/mystring.h format.h format.c
+	gcc -c format.c
 
-fromat_test.o: fromat.h fromat_test.c
-	gcc -c fromat_test.c
+format_test.o: format.h format_test.c
+	gcc -c format_test.c
 
-a.out: mystring.o fromat.o fromat_test.o
-	gcc -o a.out mystring.o fromat.o fromat_test.o
+a.out: mystring.o format.o format_test.o
+	gcc -o a.out mystring.o format.o format_test.o
 
 do-test: a.out
-	valgrind ./a.out
+	valgrind -v --leak-check=full ./a.out 
 
-clean: mystring.o fromat.o fromat_test.o
-	rm mystring.o fromat.o fromat_test.o
+clean: mystring.o format.o format_test.o a.out
+	rm mystring.o format.o format_test.o a.out
