Проще переписать, чем исправлять

--- a/Krasilnikov_NA/S5/Makefile
+++ b/Krasilnikov_NA/S5/Makefile
@@ -6,17 +6,17 @@ all: do-test clean
 mystring.o: ../libs/mystring/mystring.h ../libs/mystring/mystring.c
 	gcc -c -g ../libs/mystring/mystring.c
 
-words.o: ../libs/mystring/mystring.h words.h words.c
-	gcc -c -g words.c
+strings_words_symbols.o: ../libs/mystring/mystring.h strings_words_symbols.h strings_words_symbols.c
+	gcc -c -g strings_words_symbols.c
 
-words_test.o: words.h words_test.c
-	gcc -c -g words_test.c
+strings_words_symbols_test.o: strings_words_symbols.h strings_words_symbols_test.c
+	gcc -c -g strings_words_symbols_test.c
 
-a.out: mystring.o words.o words_test.o
-	gcc -o  a.out mystring.o words.o words_test.o
+a.out: mystring.o strings_words_symbols.o strings_words_symbols_test.o
+	gcc -o  a.out mystring.o strings_words_symbols.o strings_words_symbols_test.o
 
 do-test: a.out
 	valgrind ./a.out -g
 
-clean: mystring.o words.o words_test.o a.out
-	rm mystring.o words.o words_test.o a.out
+clean: mystring.o strings_words_symbols.o strings_words_symbols_test.o a.out
+	rm mystring.o strings_words_symbols.o strings_words_symbols_test.o a.out
