--- a/Glugovskaya_YA/Strings12/Makefile
+++ b/Glugovskaya_YA/Strings12/Makefile
@@ -1,6 +1,6 @@
 1.exe: main.o f.o
-	gcc main.o f.o -o 1.exe -lm
+	gcc -g main.o f.o -o 1.exe -lm
 main.o: main.c f.h
-	gcc -c main.c
+	gcc -g -c main.c
 f.o: f.c f.h
-	gcc -c f.c
+	gcc -g -c f.c
