--- a/Rogova_DR/10.str/makefile
+++ b/Rogova_DR/10.str/makefile
@@ -3,17 +3,17 @@ CFLAGS= -g
 
 all: do-test clean
 
-sum.o: findstr.c findstr.h
-#	gcc -c findstr.c
+sum.o: findstr1.c findstr1.h
+#	gcc -c findstr1.c
 
-sum_test.o: teststr4.o findstr.h
+sum_test.o: teststr4.o findstr1.h
 #	gcc -c test10.c
 
-a.out: teststr4.o findstr.o
-	gcc teststr4.o findstr.o -lm
+a.out: teststr4.o findstr1.o
+	gcc teststr4.o findstr1.o -lm
 
 do-test: a.out
 	./a.out
 
-clean: teststr4.o findstr.o
-	rm teststr4.o findstr.o
+clean: teststr4.o findstr1.o
+	rm teststr4.o findstr1.o
