--- a/Gorev_VA/F4/Makefile
+++ b/Gorev_VA/F4/Makefile
@@ -3,7 +3,7 @@ all: do-test clear
 do-test: a.out
 	valgrind ./a.out dir1 dir2
 
-a.out: det.o file.o
+a.out: prog.o file.o
 	gcc -c prog.c
 	gcc -c file.c
 	gcc prog.o file.o -lm
