--- a/Gorev_VA/F4/Makefile
+++ b/Gorev_VA/F4/Makefile
@@ -3,10 +3,10 @@ all: do-test clear
 do-test: a.out
 	valgrind ./a.out dir1 dir2
 
-a.out: file.o file1.o
+a.out: file.o prog.o
 	gcc -c file.c
-	gcc -c file1.c
-	gcc file1.o file.o -lm
+	gcc -c prog.c
+	gcc prog.o file.o -lm
 
 clear:
-	rm file1.o file.o a.out
+	rm prog.o file.o a.out
