--- a/Markova_MA/matrix2D/Makefile
+++ b/Markova_MA/matrix2D/Makefile
@@ -1,19 +1,13 @@
-CC=gcc
-CFLAGS= -g
+all: do-test
 
-all: do-test clean
+f.o: f.c f.h
+	gcc -c f.c
 
-sum.o: f.c f.h
-#	gcc -c f.c
-
-sum_test.o: test.o f.h
-#	gcc -c test10.c
+test.o: test.c f.h
+	gcc -c test.c
 
 a.out: test.o f.o
 	gcc test.o f.o -lm
 
 do-test: a.out
 	./a.out
-
-clean: test.o f.o
-	rm test.o f.o
