--- a/Koshmarov_AV/zachet1/Makefile
+++ b/Koshmarov_AV/zachet1/Makefile
@@ -12,11 +12,14 @@ delete_char.o : delete_char.o help.h
 coup_string.o : coup_string.o help.h
 	gcc -c coup_string.c
 
-a.out : main.o get_string.o delete_char.o coup_string.o
-	gcc main.o get_string.o delete_char.o coup_string.0
+func.o : func.c help.h
+	gcc -c func.c
+
+a.out : main.o get_string.o delete_char.o coup_string.o func.o
+	gcc main.o get_string.o delete_char.o coup_string.0 func.o
 
 do_it : a.out
 	./a.out
 
 clean : main.o get_string.o
-	rm main.o get_string.o delete_char.o coup_string.o a.out
+	rm main.o get_string.o delete_char.o coup_string.o search.o func.o a.out
