--- a/Koshmarov_AV/zachet1/Makefile
+++ b/Koshmarov_AV/zachet1/Makefile
@@ -3,23 +3,23 @@ all : do_it clean
 main.o : main.c help.h
 	gcc -c main.c
 
-get_string.o : get_string.o help.h
+get_string.o : get_string.c help.h
 	gcc -c get_string.c
 
-delete_char.o : delete_char.o help.h
+delete_char.o : delete_char.c help.h
 	gcc -c delete_char.c
 
-coup_string.o : coup_string.o help.h
+coup_string.o : coup_string.c help.h
 	gcc -c coup_string.c
 
 func.o : func.c help.h
 	gcc -c func.c
 
 a.out : main.o get_string.o delete_char.o coup_string.o func.o
-	gcc main.o get_string.o delete_char.o coup_string.0 func.o
+	gcc main.o get_string.o delete_char.o coup_string.o func.o
 
 do_it : a.out
 	./a.out
 
-clean : main.o get_string.o
-	rm main.o get_string.o delete_char.o coup_string.o search.o func.o a.out
+clean : main.o get_string.o delete_char.o coup_string.o func.o a.out
+	rm main.o get_string.o delete_char.o coup_string.o func.o a.out
