--- a/Ponomar_AE/12str/Makefile
+++ b/Ponomar_AE/12str/Makefile
@@ -1,13 +1,19 @@
-all: do-test
+CFLAGS = -c -W -Wall -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -fstack-protector-all -Wfloat-equal -Wpointer-arith -Wwrite-strings -Wcast-align -Wno-long-long -Wmissing-declarations -Wdeclaration-after-statement -fsanitize=address -g
 
-indent.o: indent.c indent.h
-	gcc -c indent.c
+all: do-test clean
 
-test.o: test.c indent.h
-	gcc -c test.c
+indent.o: indent.h indent.c
+	gcc $(CFLAGS) indent.c
 
-a.out: test.o indent.o
-	gcc test.o indent.o
+test.0: indent.h indent.c
+	gcc $(CFLAGS) test.c
+
+a.out: indent.o test.o
+	gcc -o a.out indent.o test.o -lm
 
 do-test: a.out
 	./a.out
+
+clean: indent.o test.0 a.out
+	rm indent.o test.o a.out
+
