--- a/Ponomar_AE/12str/Makefile
+++ b/Ponomar_AE/12str/Makefile
@@ -1,13 +1,12 @@
-CC=gcc
-CFLAGS=-g
+CFLAGS = -c -W -Wall -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -fstack-protector-all -Wfloat-equal -Wpointer-arith -Wwrite-strings -Wcast-align -Wno-long-long -Wmissing-declarations -Wdeclaration-after-statement -fsanitize=address -g
 
 all: do-test clean
 
 indent.o: indent.h indent.c
-	gcc -c -g indent.c
+	gcc $(CFLAGS) indent.c
 
 test.0: indent.h indent.c
-	gcc -c -g test.c
+	gcc $(CFLAGS) test.c
 
 a.out: indent.o test.o
 	gcc -o a.out indent.o test.o
