--- a/FedorovskiyS/1.1/makefile
+++ b/FedorovskiyS/1.1/makefile
@@ -1,9 +1,9 @@
 COMPILE = -O3
-prog.exe: main.o task.o
-	gcc main.o task.o -o prog.exe
-main.o: main.c prot.h
+prog.exe: main.o root.o
+	gcc main.o root.o -o prog.exe
+main.o: main.c root.h
 	gcc -c $(COMPILE) main.c
-task.o: task.c prot.h
+task.o: task.c root.h
 	gcc -c $(COMPILE) task.c
 clean:
 	rm -f *.o *.exe *.out
