--- a/FedorovskiyS/1.1/makefile
+++ b/FedorovskiyS/1.1/makefile
@@ -3,7 +3,7 @@ prog.exe: main.o root.o
 	gcc main.o root.o -o prog.exe
 main.o: main.c root.h
 	gcc -c $(COMPILE) main.c
-task.o: task.c root.h
-	gcc -c $(COMPILE) task.c
+root.o: root.c root.h
+	gcc -c $(COMPILE) root.c
 clean:
 	rm -f *.o *.exe *.out
