--- a/FedorovskiyS/2.2/makefile
+++ b/FedorovskiyS/2.2/makefile
@@ -3,7 +3,7 @@ prog.exe: main.o INT.o
 	gcc main.o INT.o -o prog.exe
 main.o: main.c INT.h
 	gcc -c $(COMPILE) main.c
-INT.o: INT.h INT.h
+INT.o: INT.c INT.h
 	gcc -c $(COMPILE) INT.c
 clean:
 	rm -f *.o *.exe *.out
