--- a/BondarevNS/1.3/Makefile
+++ b/BondarevNS/1.3/Makefile
@@ -7,11 +7,11 @@ sum.o: root.c root.h
 
 test.o: root.c root.h
 
-a.out: root.o root.o
-	gcc root.o root.o -lm
+a.out: test.o root.o
+	gcc test.o root.o -lm
 
 do-test: a.out
 	./a.out
 
-clean: root.o root.o ./a.out
+clean: test.o root.o ./a.out
 	rm test.o root.o ./a.out
