--- a/BondarevNS/zachet3/Makefile
+++ b/BondarevNS/zachet3/Makefile
@@ -7,7 +7,7 @@ process.o: process.h process.c
 #	gcc -c -g process.c
 
 test.o: process.h process.c
-#	gcc -o a.out process.o test.o 
+#	gcc -c -g test.c 
 
 a.out: process.o test.o
 	gcc -o a.out process.o test.o
