--- a/BondarevNS/zachet3/Makefile
+++ b/BondarevNS/zachet3/Makefile
@@ -4,10 +4,10 @@ CFLAGS=-g
 all: do-test clean
 
 process.o: process.h process.c
-#	gcc -c -g process.c
+	gcc -c -g process.c
 
 test.o: process.h process.c
-#	gcc -c -g test.c 
+	gcc -c -g test.c 
 
 a.out: process.o test.o
 	gcc -o a.out process.o test.o
