--- a/Gorev_VA/kr/Makefile
+++ b/Gorev_VA/kr/Makefile
@@ -4,9 +4,9 @@ do-test: a.out
 	./a.out
 
 a.out: intset.o test.o
-	gcc -c intset.c
-	gcc -c test.c
-	gcc intset.o test.o -lm
+	g++ -c intset.cpp
+	g++ -c test.cpp
+	g++ intset.o test.o -lm
 
 clear:
 	rm intset.o test.o a.out
