--- a/Korban_KD/3semester/kr2/makefile
+++ b/Korban_KD/3semester/kr2/makefile
@@ -1,7 +1,7 @@
  
 a.out: test.o vector_clock.o 
-	g++  test.o vector_clock.o  -o a.out 
-test.o: test.c
-	g++  -c test.c 
-vector_clock.o: vector_clock.c vector_clock.h
-	g++  -c vector_clock.c -o vector_clock.o 
+	g++  test.o vector_clock.o
+test.o: test.cpp
+	g++  -c test.cpp 
+vector_clock.o: vector_clock.cpp vector_clock.hpp
+	g++  -c vector_clock.cpp -o vector_clock.o 
