--- a/BondarevNS/kr/makefile
+++ b/BondarevNS/kr/makefile
@@ -1,12 +1,12 @@
 all: do-test clean
 
 matr.o: matr.cpp
-	g++ -c matr.cpp
+	g++ -c -g matr.cpp
 test.o: test.cpp
-	g++ -c test.cpp
-run: matr.o test.o
-	g++ -o run test.o matr.o -lm
-do-test: run
-	./run
-clean: 
+	g++ -c -g test.cpp
+a.out: matr.o test.o
+	g++ test.o matr.o
+do-test: a.out
+	valgrind ./a.out
+clean:
 	rm -rf *.o
