--- a/Krasilnikov_NA/Sem3/Kr22.10/Makefile
+++ b/Krasilnikov_NA/Sem3/Kr22.10/Makefile
@@ -1,11 +1,11 @@
 all: do-test clean
 
-IntSet.o: Matrix.cpp
-	g++ -c -g Maatrix.cpp
+IntSet.o: matrix.cpp
+	g++ -c -g matrix.cpp
 test.o: test.cpp
 	g++ -c -g test.cpp
-a.out: Maatrix.o test.o
-	g++ test.o Maatrix.o
+a.out: matrix.o test.o
+	g++ test.o matrix.o
 do-test: a.out
 	valgrind ./a.out
 clean:
