--- a/Gorev_VA/task2/Makefile
+++ b/Gorev_VA/task2/Makefile
@@ -3,10 +3,10 @@ all: do-test clear
 do-test: a.out
 	valgrind ./a.out
 
-a.out: list.o test.o
-	g++ -c list.cpp
+a.out: node.o test.o
+	g++ -c node.cpp
 	g++ -c test.cpp
-	g++ list.o test.o -lm
+	g++ node.o test.o -lm
 
 clear:
-	rm list.o test.o a.out
+	rm node.o test.o a.out
