--- a/Gorev_VA/task2/Makefile
+++ b/Gorev_VA/task2/Makefile
@@ -1,12 +1,12 @@
 all: do-test clear
 
 do-test: a.out
-	valgrind -g ./a.out
+	valgrind ./a.out
 
-a.out: node.o test.o
-	g++ -c node.cpp
+a.out: list.o test.o
+	g++ -c list.cpp
 	g++ -c test.cpp
-	g++ node.o test.o -lm
+	g++ list.o test.o -lm
 
 clear:
-	rm node.o test.o a.out
+	rm list.o test.o a.out
