Добавила возмажные типы данные
Dek.cpp 65 строка

--- a/Glugovskaya_YA/3 semestr/Dek/Makefile
+++ b/Glugovskaya_YA/3 semestr/Dek/Makefile
@@ -1,6 +1,6 @@
 a.exe: test.o Dek.o
-	g++  test.o Dek.o
-Dek.o: Dek.cpp Dek.h
-	g++ -c  Dek.cpp
+	g++ test.o Dek.o
+Dek.o: Dek.cpp Dek.hpp
+	g++ -c Dek.cpp
 test.o: test.cpp 
-	g++ -c  test.cpp
+	g++ -c test.cpp
