--- a/Chizhik_MA/year2/bitset/Makefile
+++ b/Chizhik_MA/year2/bitset/Makefile
@@ -9,7 +9,7 @@ run: bitset.o test.o
 	g++ -o run bitset.o test.o
 
 do-test: run
-	valgrind ./run
-	#./run
+	#valgrind ./run
+	./run
 clean: bitset.o test.o
 	rm -rf *.o
