--- a/Glugovskaya_YA/3 semestr/Kontrolnaya/Makefile
+++ b/Glugovskaya_YA/3 semestr/Kontrolnaya/Makefile
@@ -1,16 +1,7 @@
-all: do-test clean
-
-func.o: Time.cpp 
-	g++ -c Time.cpp
-
-test.o: test.cpp
-	g++ -c test.cpp
-
-a.exe: test.o Time.o 
-	g++ test.o Time.o -lm -o a.exe
-
-do-test: a.exe
-	./a.exe
-
-clean: test.o Time.o
-	rm test.o Time.o
+CPPFLAGS = -fsanitize=address -mfpmath=sse -fstack-protector-all -g -W -Wall -Wextra -Wunused -Wcast-align -Werror -pedantic -pedantic-errors -Wfloat-equal -Wpointer-arith -Wformat-security -Wmissing-format-attribute -Wwrite-strings -Wcast-align -Wno-long-long -Woverloaded-virtual -Wnon-virtual-dtor -Wcast-qual -std=c++11
+a.exe: test.o Time.o
+	g++ $(CPPFLAGS) test.o Time.o
+Time.o: Time.cpp Time.h
+	g++ -c $(CPPFLAGS) Time.cpp
+test.o: test.cpp 
+	g++ -c $(CPPFLAGS) test.cpp
