--- a/Glugovskaya_YA/3 semestr/Dek/Makefile
+++ b/Glugovskaya_YA/3 semestr/Dek/Makefile
@@ -1,6 +1,6 @@
 a.exe: test.o Dek.o
 	g++ test.o Dek.o
-Dek.o: Dek.cpp Dek.h
+Dek.o: Dek.h Dek.cpp
 	g++ -c Dek.cpp
-test.o: test.cpp 
+test.o: Dek.h test.cpp 
 	g++ -c test.cpp
