Задачка на списки

--- a/Dolgikh_AA/spiski/Makefile
+++ b/Dolgikh_AA/spiski/Makefile
@@ -1,1 +1,13 @@
-.
+all: do-test clean
+
+class.o: main.cpp
+	g++ -c main.cpp
+
+a.out: main.o
+	g++ main.o
+
+do-test: a.out
+	valgrind ./a.out
+
+clean: main.o
+	rm main.o a.out
